--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.6",
-    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
