--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.6",
+    "react-responsive": "^9.0.0-beta.3",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "web-vitals": "^1.1.2"
